# open_stbc

./: .gitignore  App.py  CLAUDE.md  CMakeLists.txt  LoadBridge.py  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: bc_content_survey.md  cleanroom_netimmerse_answers.md  cleanroom_netimmerse_questions.md  cleanroom_netimmerse_supplementary.md  gap_analysis.md  nif_conventions.md  open_questions.md  python_env.md
docs/architecture/: sub_project_status.md
docs/instrumented_experiments/: 2026-05-12-system-scale-investigation.md  2026-05-15-damage-routing-investigation.md  2026-05-15-hardpoint-scale-investigation.md
docs/project/: cleanroom_netimmerse_answers_round2.md  cleanroom_netimmerse_questions_round2.md  folder_structure.md  nif_conventions.md  open_questions.md
docs/status_page/: index.html
engine/: host_loop.py  mission_picker.py  renderer.py  scale.py  shields.py
engine/appc/: actions.py  ai.py  ai_driver.py  backdrops.py  characters.py  combat.py  config_mapping.py  constants.py  debug.py  events.py  input.py  lights.py  localization.py  math.py  objects.py  placement.py  planet.py  projectiles.py  properties.py  save_load.py  sequences.py  sets.py  ship_iter.py  ship_lifecycle.py  ship_motion.py  ships.py  subsystems.py  time_slice.py  timers.py
engine/audio/: alert_audio.py  bridge_ambient.py  engine_rumble.py  manager.py  tg_sound.py
engine/core/: game.py  loop.py
engine/events/: broadcast.py  manager.py
engine/missions/: __init__.py  discovery.py  name_resolver.py  tgl_reader.py
engine/physics/: simulation.py
engine/spatial/: proximity.py  raycast.py
engine/ui/: __init__.py  _dom.py  bindings.py  button.py  collapsible.py  panel.py  stat_row.py  target_list.py  theme.py
gh-pages/: project-status.html
native/: CMakeLists.txt
native/assets/ui/: components.rcss  hud.rcss  hud.rml  panel.rml
native/src/: main.cpp
native/src/assets/: CMakeLists.txt
native/src/assets/docs/: deferred_work.md  material_translation.md
native/src/assets/include/assets/: animation.h  asset.h  cache.h  material.h  mesh.h  model.h  path_resolver.h  skeleton.h  texture.h
native/src/assets/src/: _placeholder.cc  animation_build.cc  animation_build.h  cache.cc  gl_handle.cc  gl_handle.h  link_resolver.h  material_build.cc  material_build.h  mesh_build.cc  mesh_build.h  mesh_lifetime.cc  mesh_upload.cc  mesh_upload.h  model_build.cc  model_build.h  path_resolver.cc  skeleton_build.cc  skeleton_build.h  texture_decode.cc  texture_lifetime.cc  texture_upload.cc
native/src/audio/: CMakeLists.txt  wav.cc  wav.h
native/src/audio/include/audio/: wav.h
native/src/audio/src/: openal_backend.cc  wav.cc
native/src/audio/tests/: test_wav.cc
native/src/host/: CMakeLists.txt  host_bindings.cc  host_bindings.h  host_main.cc
native/src/host/docs/: deferred_work.md
native/src/nif/: CMakeLists.txt
native/src/nif/include/nif/: block.h  legacy_constants.h  types.h  version.h
native/src/nif/src/: dispatch.cc  empty.cc  file.cc  header.cc  reader.cc  reader.h
native/src/nif/src/blocks/: animation.cc  av_object_base.cc  extra_data.cc  ni_node.cc  scene.cc  textures.cc
native/src/renderer/: CMakeLists.txt  backdrop_pass.cc  bridge_pass.cc  dust_pass.cc  fbo.cc  frame.cc  hit_vfx_pass.cc  lens_flare_pass.cc  phaser_pass.cc  pipeline.cc  shader.cc  shield_pass.cc  shield_state.cc  skin_shield.cc  sphere_mesh.cc  sphere_mesh.h  sun_pass.cc  torpedo_pass.cc  window.cc
native/src/renderer/include/renderer/: backdrop_pass.h  dust_pass.h  fbo.h  frame.h  hit_vfx_pass.h  lighting.h  pipeline.h  shader.h  shield_pass.h  shield_state.h  skin_shield.h  sun_pass.h  torpedo_pass.h  window.h
native/src/renderer/shaders/: backdrop.frag  backdrop.vert  blur.frag  blur.vert  bridge.frag  bridge.vert  dust.frag  dust.vert  hit_vfx.frag  hit_vfx.vert  lens_flare.frag  lens_flare.vert  lightmap.frag  opaque.frag  opaque.vert  phaser.frag  phaser.vert  sun.frag  sun.vert  torpedo.frag  torpedo.vert
native/src/scenegraph/: CMakeLists.txt
native/src/scenegraph/include/scenegraph/: camera.h  instance.h  world.h
native/src/scenegraph/src/: camera.cc  world.cc
native/src/ui/: CMakeLists.txt  HudDocument.cc  PanelDocument.cc  UiSystem.cc
native/src/ui/include/ui/: HudDocument.h  PanelDocument.h  UiSystem.h
native/tests/: CMakeLists.txt
native/tests/assets/: CMakeLists.txt
native/tests/assets/cpu/: animation_build_test.cc  cache_test.cc  header_compile_test.cc  material_build_test.cc  mesh_build_test.cc  model_build_test.cc  path_resolver_test.cc  raw_image_decode_test.cc  sanity_test.cc  skeleton_build_test.cc  texture_decode_test.cc
native/tests/assets/gpu/: fixture_smoke_test.cc  gl_fixture.cc  gl_fixture.h  mesh_upload_test.cc  model_smoke_test.cc  texture_upload_test.cc
native/tests/audio/: CMakeLists.txt  wav_test.cc
native/tests/nif/: ni_node_test.cc  ni_tri_shape_test.cc  reader_test.cc  sample_paths.h  version_test.cc
native/tests/renderer/: CMakeLists.txt  backdrop_pass_test.cc  dust_pass_test.cc  fbo_test.cc  frame_test.cc  lighting_test.cc  pipeline_test.cc  shader_test.cc  shield_state_test.cc  skin_shield_test.cc  skybox_test.cc  sun_pass_test.cc  window_test.cc
native/tests/scenegraph/: CMakeLists.txt  camera_test.cc  world_test.cc
native/tools/probe_block_inventory/: probe_block_inventory.cc
native/tools/probe_shape_transforms/: CMakeLists.txt  probe_shape_transforms.cc
ships/Hardpoints/: sovereign.py
tests/: conftest.py  test_mission_picker.py
tests/audio/: test_alert_audio.py  test_engine_rumble.py  test_game_load_sound.py  test_host_loop_audio_init.py
tests/host/: test_alert_keys.py  test_backdrops_bindings.py  test_backdrops_integration.py  test_bindings_smoke.py  test_bridge_bindings.py  test_camera_control.py  test_dust_bindings.py  test_embedded_engine_import.py  test_frame_robustness.py  test_host_loop_lighting.py  test_host_loop_planets.py  (+12 more)
tools/: analyze_session.py  appc_logger.py  asset_scanner.py  gameloop_harness.py  listen.py  mission_harness.py  pick_default_skybox.py  setup.py  tgl_harness.py  uninstall.py
(+273 files in other folders)
